# ward-pulse

./: .editorconfig  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  justfile  package-lock.json  package.json
.github/workflows/: core.yml  docs.yml  phone-android.yml  watchface.yml  wear-android.yml
apps/phone_flutter/: .gitignore  README.md  pubspec.yaml
apps/watchface_wff/: README.md  build.gradle.kts  settings.gradle.kts
apps/wear_android/: README.md  build.gradle.kts  settings.gradle.kts
brand/: README.md
core/: Cargo.toml
core/ward-pulse-cli/: Cargo.toml
core/ward-pulse-cli/src/: main.rs
core/ward-pulse-core/: Cargo.toml
core/ward-pulse-core/src/: lib.rs  time.rs
core/ward-pulse-core/src/alerts/: mod.rs
core/ward-pulse-core/src/budget/: mod.rs
core/ward-pulse-core/src/dashboard/: mod.rs
core/ward-pulse-core/src/model/: mod.rs
core/ward-pulse-core/src/projection/: mod.rs
core/ward-pulse-ffi/: Cargo.toml  uniffi.toml
core/ward-pulse-ffi/src/: lib.rs
core/ward-pulse-providers/: Cargo.toml
core/ward-pulse-providers/src/: lib.rs
core/ward-pulse-providers/src/claude/: mod.rs
core/ward-pulse-providers/src/codex/: mod.rs
core/ward-pulse-providers/src/cursor/: mod.rs
core/ward-pulse-providers/src/mock/: mod.rs
core/ward-pulse-providers/src/openai/: mod.rs
docs/: ANDROID_TOOLCHAIN.md  DESIGN_ASSETS.md  DEVELOPMENT_PLAN.md  DOCUMENTATION.md  README.md
schemas/: budget_state.schema.json  dashboard_snapshot.schema.json  provider_account.schema.json  usage_bucket.schema.json  watch_dashboard_summary.schema.json
tools/: openpencil.mjs
(+113 files in other folders)
