[workspace]
members = [
  "ward-pulse-core",
  "ward-pulse-providers",
  "ward-pulse-ffi",
  "ward-pulse-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
publish = false
repository = "https://github.com/neuroborus/ward-pulse"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
