[package]
name = "ward-pulse-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ward-pulse-core = { path = "../ward-pulse-core" }
ward-pulse-providers = { path = "../ward-pulse-providers" }
serde_json.workspace = true
