[package]
name = "ward-pulse-providers"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ward-pulse-core = { path = "../ward-pulse-core" }
